[B]Note:[/B]  IRC Chat Channel: #The_Projects @ irc.snoonet.org:6667

[B]Version 0.9.18[/B] - (04/30/2016)
- config.py: Changed "http://" to "https://".  This fixed the login issue.

[B]Version 0.9.18[/B] - (03/25/2016)
- default.py: function listLinks(...): Link Method #8 added. (stream)
- settings.xml: Additional options....

[B]Version 0.9.17[/B] - (03/07/2016)
- default.py: function listLinks(...): Link Method #7 added.
- default.py: function PlayVideo(...): Attemping to make use of UrlResolver.
- settings.xml: Updated information for Method #7.
- addon.xml: Added requirement for UrlResolver.
- Waiting to see how things go for a bit....

[B]Version 0.9.16[/B] - (02/25/2016)
- Fixes done on Kodi 16.0.x Jarvis.  Found that print statements were no longer writing to kodi.log, so did a bit of tweaking to make use of xbmc.log(...).
- Attempts to figure out what`s going on with the login system.  Nothing much yet.
- teh_tools.py: function Check_Login(): fixed hasPassword_Cookie check.

[B]Version 0.9.15[/B] - (11/19/2015)
- default.py: function listItems_Upcoming(...): some html code filtering additions to the plot description.

[B]Version 0.9.14[/B] - (11/15/2015)
- default.py: function listEpisodes(...): change in html page for information used for variable "NEpCountdown".  Information may be hidden within addon for this for the time being.

[B]Version 0.9.13[/B] - (11/06/2015)
- teh_tools.py: ....
- default.py and teh_tools.py: adjustments to image handling for .to domain.
- default.py: function listLinks(...): link type 3: adjustments due to white space and line return added between "Quality selector" and "<select".

[B]Version 0.9.12[/B] - (11/05/2015)
- Adjustment(s) for SQL Favorites listings call due to domain change.
- Domain change(s).

[B]Version 0.9.11[/B]
- Possible Android playback issue fix
- Auto-Play adjustments (resolution options changed, episode/video title on playback)
- 'Play from here' now allows skipping to next episode/video
